Top spacing fix??

--- a/docs/styleHomepage.css
+++ b/docs/styleHomepage.css
@@ -117,6 +117,6 @@ body {
     }
 
     .container.mainMenu {
-      top: 80px;
+      top: 100px;
     }
   }
